# bitwardenclients

./: eslint.config.mjs  jest.config.js  lint-staged.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  renovate.json5  whitelist-capital-letters.txt
.github/workflows/: auto-branch-updater.yml  build-browser.yml  build-cli.yml  build-desktop.yml  build-web.yml  chromatic.yml  crowdin-pull.yml  lint-crowdin-config.yml  lint.yml  locales-lint.yml  nx.yml  publish-cli.yml  publish-desktop.yml  publish-web.yml  release-browser.yml  release-desktop.yml  release-web.yml  repository-management.yml  sdk-breaking-change-check.yml  test-browser-interactions.yml  test.yml  version-auto-bump.yml
.storybook/: main.ts
apps/browser/: README.md  webpack.base.js
apps/browser/config/: base.json  development.json
apps/cli/: README.md  package.json
apps/desktop/: README.md  custom-appx-manifest.xml  electron-builder.beta.json  electron-builder.json  package.json  sign.js  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  tsconfig.spec.json  webpack.base.js  webpack.config.js
apps/desktop/desktop_native/autofill_provider/: Cargo.toml  README.md  build.sh  uniffi-bindgen.rs
apps/desktop/desktop_native/autofill_provider/src/: assertion.rs  lib.rs  lock_status.rs  registration.rs  window_handle_query.rs
apps/desktop/desktop_native/autotype/: Cargo.toml
apps/desktop/desktop_native/autotype/src/: lib.rs  linux.rs  macos.rs  modifier_keys.rs
apps/desktop/desktop_native/autotype/src/windows/: mod.rs  type_input.rs  window_title.rs
apps/desktop/desktop_native/autotype/tests/: integration_tests.rs
apps/desktop/desktop_native/ssh_agent/: Cargo.toml
apps/desktop/desktop_native/ssh_agent/src/: lib.rs
apps/desktop/desktop_native/ssh_agent/src/crypto/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/storage/: keydata.rs  keystore.rs  mod.rs  serialization.rs
apps/web/: tailwind.config.js
bitwarden_license/bit-web/: tsconfig.build.json  tsconfig.json
libs/auto-confirm/: README.md  jest.config.js  project.json
libs/common/: tsconfig.spec.json
libs/components/: tailwind.config.js
libs/subscription/: README.md  jest.config.js  project.json
scripts/: dep-ownership.ts
(+1304 files in other folders)
