[package]
name = "autotype"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[target.'cfg(windows)'.dependencies]
itertools.workspace = true
mockall.workspace = true
serial_test = "=3.4.0"
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
windows = { workspace = true, features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[lints]
workspace = true
